# Zipper

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CMakeLists.txt  CMakeUserPresets.json  Makefile  README.md  conan-install.sh  conanfile.txt
scripts/: conan-install.sh  pre-commit-install.sh  test.sh
src/: CMakeLists.txt  main.cpp
src/archiver/: ArchiveType.cpp  ArchiveType.h  Archiver.cpp  Archiver.h  Cli.cpp  Cli.h  CommandHandler.cpp  CommandHandler.h  CommandInfo.cpp  CommandInfo.h
